# ritn3d-mcp

./: README.md  pyproject.toml  server.json
src/ritn3d_mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
src/ritn3d_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_tools.py
